fixed spacing and size for links in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@ ul {
 li {
     display: inline;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: 100;
 }
 
 h1  {
